# skilltree

api/: Alicia.py  graph.py  node.py  openai_session.py  pyproject.toml  server.py
flask_api_endpoints/: server.py
website/: package.json  tailwind.config.ts
website/src/components/: graph.tsx
website/src/context/: LoginContext.ts
website/src/pages/: _app.tsx  app.tsx  index.tsx  login.tsx  signup.tsx
website/src/styles/: globals.css
