[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Shreyas Sreenivas <46835608+shreyas44@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
pymongo = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
